@@ -1,3 +1,9 @@
+2007-08-03  Marcus Meissner  <marcus@jet.franken.de>
+
+	* ptp.h, ptp-pack.c: From libmtp:
+	  Pack/unpack 64bit integers.
+	  Fixed packing of arrays.
+
 2007-07-26  Marcus Meissner  <marcus@jet.franken.de>
 
 	* library.c: Merged MTP devices from libmtp.
